--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@prisma/client": "^5.12.0",
+        "bcryptjs": "^3.0.3",
         "clsx": "^2.1.0",
+        "dotenv": "^17.2.3",
         "framer-motion": "^11.0.0",
+        "jose": "^6.1.3",
         "lucide-react": "^0.370.0",
         "next": "14.2.0",
         "react": "^18",
@@ -18,6 +22,7 @@
         "tailwind-merge": "^2.3.0"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -25,6 +30,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.2.0",
         "postcss": "^8",
+        "prisma": "^5.12.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
