--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@prisma/client": "^5.12.0",
+        "@prisma/client": "5.22",
         "bcryptjs": "^3.0.3",
         "clsx": "^2.1.0",
         "dotenv": "^17.2.3",
@@ -30,8 +30,11 @@
         "eslint": "^8",
         "eslint-config-next": "14.2.0",
         "postcss": "^8",
-        "prisma": "^5.12.0",
+        "prisma": "5.22",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
+    },
+    "prisma": {
+        "seed": "npx tsx prisma/seed.ts"
     }
 }
